// Copyright 2020-2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package invoice.v1;

import "tag/v1/tag.proto";
// @doc buf.build/genkit/tool-options
import "genkit/tool/v1/tool_metadata.proto";

option go_package = "example.com/test/invoice/v1;invoicev1";

// Invoice is a collection of goods or services sold to a customer.
message Invoice {
  string invoice_id = 1;
  string customer_id = 2;
  repeated LineItem line_items = 3;
}

// LineItem is an individual good or service added to an invoice.
message LineItem {
  string line_item_id = 1;
  string product_id = 2;
  uint64 quantity = 3;
  uint64 unit_price = 4;
}

// CreateInvoiceRequest is a request to create an invoice.
message CreateInvoiceRequest {
  Invoice invoice = 1 [(genkit.tool.v1.field_doc) = {
    desc: "The invoice to create."
    required: true
  }];
  tag.v1.Tags tags = 2;
}

// CreateInvoiceResponse is the response from creating an invoice.
message CreateInvoiceResponse {
  string invoice_id = 1;
}

// InvoiceService is a simple CRUD service for managing invoices.
service InvoiceService {
  // CreateInvoice creates a new invoice.
  rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse){
    option (genkit.tool.v1.tool_doc) = {
      name: "create_invoice",
      desc: "Create a new invoice."
      tags: [
        "invoice",
        "create"
      ],
      input: "info to create invoice"
      output: "id of created invoice"
    };
  }
}
